modules/gdscript/tests/scripts/parser/errors/warning_ignore_restore_without_start.gd
@warning_ignore_restore("unreachable_code")

func test():
	pass
